# Life

./: .gitignore  Life.cabal  README.md  stack.yaml
src/: Main.hs  Util.hs  World.hs
