name:                Life
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Fylipp/Life
license:             MIT
license-file:        LICENSE
author:              Philipp Ploder
maintainer:          https://github.com/Fylipp
copyright:           2018 Philipp Ploder
category:            Cellular Automaton
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Life
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, directory, vector, vector-split, JuicyPixels
  other-modules:       Util, World
